--- a/jobs/templates/application_success.html
+++ b/jobs/templates/application_success.html
@@ -29,7 +29,7 @@
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card">
-                <div class="card-header">{{ jobseeker.username }}, Your Job Application Was Submitted Successfully</div>
+                <div class="card-header">{{ jobseeker.first_name }} {{ jobseeker.last_name }}, Your Job Application Was Submitted Successfully</div>
 
                 <div class="card-body">
                     <p>Your application for the position of {{ job.title }} at {{ job.employer }} was successfully submitted.</p>
