--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -64,16 +64,16 @@
                 <li><a class="dropdown-item" href="{% url 'jobseeker_dashboard' %}">Dashboard</a></li>
                 {% endif %}
                 {% if request.user.is_company %}
-                <li><a class="dropdown-item" href="#">Dashboard</a></li>
+                <li><a class="dropdown-item" href="{% url 'employer_dashboard' %}">Dashboard</a></li>
                 {% endif %}
                 {% if request.user.is_government %}
                 <li><a class="dropdown-item" href="#">Dashboard</a></li>
                 {% endif %}
-                {% if id %}
+                
                   {% if request.user.is_jobseeker %}
-                  <li><a class="dropdown-item" href="{% url 'jobseeker_profile' id %}">Profile</a></li>
+                  <li><a class="dropdown-item" href="{% url 'jobseeker_profile' id=jobseeker_id %}">Profile</a></li>
                   {% endif %}
-                {% endif %}
+                
                 {% if request.user.is_company %}
                 <li><a class="dropdown-item" href="#">Profile</a></li>
                 {% endif %}
