--- a/accounts/templates/jobseeker_dashboard.html
+++ b/accounts/templates/jobseeker_dashboard.html
@@ -83,33 +83,7 @@
                           <div class="card-body text-center">
                             <h4 class="card-title mb-3">Total Saved Jobs</h4>
                             <p class="card-text">
-                            <span class="display-4 font-weight-bold">{{total_saved_jobs}}</span>
-                            <div>
-                                <canvas id="savedJobsChart" width="400" height="200"></canvas>
-                            </div>
-                            <script>
-                              const ctx = document.getElementById('savedJobsChart');
-                      
-                              new Chart(ctx, {
-                                  type: 'bar',
-                                  data: {
-                                  labels: {{months|safe}},
-                                  datasets: [{
-                                      label: '# of Saved Jobs',
-                                      data: {{total_saved_jobs_by_month|safe}},
-                                      borderWidth: 1
-                                  }]
-                                  },
-                                  options: {
-                                  scales: {
-                                      y: {
-                                      beginAtZero: true
-                                      }
-                                  }
-                                  }
-                              });
-                              </script>
-                      
+                            <span class="display-4 font-weight-bold">{{total_saved_jobs}}</span>                   
                             </p>
                           </div>
                         </div>
@@ -120,32 +94,7 @@
                           <div class="card-body text-center">
                             <h4 class="card-title mb-3">Total Applied Jobs</h4>
                             <p class="card-text">
-                              <span class="display-4 font-weight-bold">{{total_job_applications}}</span>
-                              <div>
-                                <canvas id="appliedJobsChart" width="400" height="200"></canvas>
-                              </div>
-                              <script>
-                                const atx = document.getElementById('appliedJobsChart');
-                        
-                                new Chart(atx, {
-                                    type: 'line',
-                                    data: {
-                                    labels: {{applied_by_day|safe}},
-                                    datasets: [{
-                                        label: '# of Saved Jobs',
-                                        data: {{count_by_day|safe}},
-                                        borderWidth: 1
-                                    }]
-                                    },
-                                    options: {
-                                    scales: {
-                                        y: {
-                                        beginAtZero: true
-                                        }
-                                    }
-                                    }
-                                });
-                                </script>
+                              <span class="display-4 font-weight-bold">{{total_job_applications}}</span>                             
                             </p>
                           </div>
                         </div>
@@ -159,31 +108,6 @@
                               <h4 class="card-title mb-3">Total Profile Views</h4>
                               <p class="card-text">
                                 <span class="display-4 font-weight-bold">{{total_views}}</span>
-                                <div>
-                                  <canvas id="profileViewChart" width="400" height="200"></canvas>
-                                </div>
-                                <script>
-                                  const ptx = document.getElementById('profileViewChart');
-                          
-                                  new Chart(ptx, {
-                                      type: 'line',
-                                      data: {
-                                      labels: {{days|safe}},
-                                      datasets: [{
-                                          label: '# of Saved Jobs',
-                                          data: {{viewCounts|safe}},
-                                          borderWidth: 1
-                                      }]
-                                      },
-                                      options: {
-                                      scales: {
-                                          y: {
-                                          beginAtZero: true
-                                          }
-                                      }
-                                      }
-                                  });
-                                  </script>
                               </p>
                             </div>
                           </div>
@@ -226,7 +150,7 @@
                             <td>{{ saved_job.employer }}</td>
                             <td>{{ saved_job.saved_at }}</td>
                             <td>
-                              <a href="{% url 'job_detail' id=saved_job.job.id %}" class="btn btn-sm" style="background-color:#29569F;">View Job</a>
+                              <a href="{% url 'job_detail' job_id=saved_job.job.id %}" class="btn btn-sm" style="background-color:#29569F;">View Job</a>
                               <a href="{% url 'remove_saved_job' saved_job_id=saved_job.id %}" class="btn btn-danger btn-sm">Remove Job</a>
                             </td>
                           </tr>
@@ -255,7 +179,7 @@
                         {% for application in job_applications %}
                           <tr>
                             <td>{{ application.job }}</td>
-                            <td>{{ saved_job.employer }}</td>
+                            <td>{{ application.employer }}</td>
                             <td>{{ application.date_applied }}</td>
                           </tr>
                         {% endfor %}
