--- a/accounts/templates/signin.html
+++ b/accounts/templates/signin.html
@@ -41,7 +41,7 @@
                     <div class="col-10">{{ form.username|as_crispy_field }}</div>
                     <div class="col-10">{{ form.password|as_crispy_field }}</div>
                 </div>
-                <p><a href="{% url 'reset_password' %}" class="fw-bold" style="color:#29569F">Forgot Password?</a></p>
+                <p><a href="{% url 'password_reset' %}" class="fw-bold" style="color:#29569F">Forgot Password?</a></p>
                 <button type="submit" class="btn mt-3 text-white" style="font-weight:400; font-size:15px; background-color:#29569F; width:510px;">Sign In</button>
             </form> 
             <h6 class="text-center fw-light">Don't have an account?</h6>
