--- a/jobs/templates/jobs.html
+++ b/jobs/templates/jobs.html
@@ -84,9 +84,10 @@
     <h3 class="text-center my-4 font-weight-bold" style="position:relative; left: -210px; font-weight: bold">No Jobs found</h3>
     {% endif %}
     <div class="row">
+      
       <div class="col-lg-3 col-xl-3 col-md-3 col-sm-12">
         <h4>Locations</h4>
-          <ul class="list-group">
+        <ul class="list-group">
             {% for location in locations %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 <a href="?location={{ location.id }}" class="text-black">{{ location.name }}</a>
@@ -99,10 +100,13 @@
                 </span>
             </li>
             {% endfor %}
-          </ul>
-      </div>
+        </ul>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <a href="?" class="btn" style="background-color:red; color:#FFFFFF">Clear Filter</a>
+      </li>
+    </div>
+    
       <div class="col-lg-9 col-xl-9 col-md-9 col-sm-12">
-
           {% if jobs %}
                   {% for job in jobs %}
                   <div class="job-item p-4 mb-4">
